--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/montysaengsavang/workspace/CS-157A-Project/lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
