Added more employeeFunctions Implemented all employee functions in the backend

--- a/src/frontend/.gitignore
+++ b/src/frontend/.gitignore
@@ -16,3 +16,8 @@
 /EmployeeFrame$5.class
 /EmployeeFrame$6.class
 /EmployeeFrame$7.class
+/EmployeePanel.class
+/EmployeePanel$1.class
+/EmployeePanel$2.class
+/EmployeePanel$3.class
+/EmployeePanel$4.class
